--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-qrcode-scanner": "^1.4.0",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
