--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
-
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "find-config": "^1.0.0",
     "http-errors": "~1.6.3",
     "mongodb": "^3.5.5",
     "morgan": "~1.9.1",
